# stocks_screener

./: .gitignore  .pre-commit-config.yaml  README.md  batching.py  csv_logic.py  fetchers.py  full_blown_rsi.py  full_blown_set.py  logic.py  lse.py  main.py  noxfile.py  pyproject.toml  requirements.txt  us_stocks.py  worker_rulebook.py  workers.py
config/: full_blown_set.py  indicators.py  logic.py
indicators/: bb.py  ema.py  ma.py  rsi.py
inputs/: DE_stocks.csv  FR_stocks.csv  LSE_tickers.csv  all_us_stocks.csv  fake.csv  lse_list.csv  test.csv  xetra_list.csv
outputs/: rsi.csv
processors/: lse_scraper.py  pse_filter.py  us_stocks_scraper.py  xetra_filter.py
raw_csvs/: euronext_raw.csv  xetra_raw.csv
scrapers/: lse.py  pse_filter.py  us_stocks.py  xetra.py  xetra_filter.py
screener/: pyvenv.cfg
strategies/: dip.py  rsi_sma.py  trend.py
tests/: fake.csv  fake2.csv  manual_test_indicator.py  test_indicators.py  test_logic.py
