[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocks-screener"
version = "0.1.0"
description = "Universal stock screening utilities"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
# This is the cleanest way to find packages without specific names
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["inputs*", "outputs*", "tests*", "scripts*", "docs*", ".venv*", "venv*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.txt", "*.yaml"]

# --- Code formatting ---  
[tool.black]  
target-version = ["py311"]  
line-length = 100
  
# --- Linting ---  
[tool.ruff]  
target-version = "py311"
exclude = [".git", "__pycache__", ".nox", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]  
select = ["E", "W", "F", "I", "A", "B", "C4", "SIM", "T20", "UP", "RUF"]  
ignore = ["E501"] 
  
[tool.ruff.lint.per-file-ignores]  
"__init__.py" = ["F401"] 
  
[tool.ruff.lint.isort]  
lines-after-imports = 2
  
# --- Type checking ---  
[tool.mypy]
python_version = "3.11"
# This tells mypy that the current directory is the root for all imports
mypy_path = "."
# This prevents mypy from trying to guess other roots
explicit_package_bases = true

pretty = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["build/", "dist/", "venv/", ".venv/", "inputs/", "outputs/"]

# --- Security ---  
[tool.bandit]  
exclude_dirs = [".nox", ".venv", "venv", "build", "dist"]